argocd/snutt-dev/snutt-api/snutt-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snutt-api
  labels:
    app: snutt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snutt-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: snutt-api
    spec:
      serviceAccountName: snutt-api-dev
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/snutt-dev/snutt-api
          name: snutt-api
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: snutt-api
spec:
  type: ClusterIP
  selector:
    app: snutt-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: snutt-api
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - snutt-api-dev.wafflestudio.com
  http:
    - name: "dev-snutt-api-route"
      timeout: 10s
      route:
        - destination:
            host: snutt-api
      corsPolicy:
        allowHeaders:
          - authorization
          - content-type
          - x-access-apikey
          - x-access-token
          - x-client-platform
          - x-client-key
          - x-app-version
          - x-app-type
          - x-os-type
          - x-os-version
          - x-device-id
          - x-device-model
          - x-language
        allowMethods:
          - POST
          - GET
          - PUT
          - PATCH
          - DELETE
          - OPTIONS
        allowOrigins:
          - exact: "https://snutt-dev.wafflestudio.com"
          - exact: "https://snutt-admin-dev.wafflestudio.com"
          - exact: "https://snutt-ev-web-dev.wafflestudio.com"
          - exact: "https://snutt-theme-market-dev.wafflestudio.com"
          - exact: "http://localhost:3000"
